# Kubric-UiDR

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  ALL-CLEAR.md  COMPREHENSIVE-AUDIT-REPORT.md  Cargo.toml  DEVELOPER-BOOTSTRAP.md  DOCS-SETUP-GUIDE.md  Dockerfile.agents  Dockerfile.api  Dockerfile.web  FILE-STRUCTURE-AUDIT-COMPLETE.md  Makefile  NOTION-TREE.md  PATCHED-v1.0.0-rc1.md  QUICKREF.md  QUICKSTART.md  README-PUBLIC.md  README-STRUCTURE.md  README.md  READY-TO-SHIP.md  TREE.md  create_missing_files.py  docker-compose.prod.yml  docker-compose.yml  generate_all_files.py  go.mod  go.sum  package.json  requirements.txt  tmpclaude-107b-cwd  tools.go  vercel.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build-agents.yml  build-push-images.yml  deploy-k8s.yml  docu-notion-sync.yml  docu-notion.yml  license-check.yml  release.yml  sync-notion-docs.yml  test.yml  upstream-intel-sync.yml
.kubric/: deployment-rules.yaml  health-checks.yaml  stack.yaml
00_K-VENDOR-00_DETECTION_ASSETS/: K-VENDOR-000_INDEX.md  K-VENDOR-RUD-001_INDEX.md
03_K-KAI-03_ORCHESTRATION/: K-KAI-ML-001_tensorboard_logger.py  K-KAI-ML-002_clearml_experiment.py  K-KAI-ML-003_pyspark_distributed.py  K-KAI-ML-004_openai_fallback.py  K-KAI-ML-005_anthropic_long_context.py  K-KAI-ML-006_cohere_embeddings.py  K-KAI-ML-007_hikari_preprocessor.py  K-KAI-ML-008_ember_xgboost.py  K-KAI-ML-009_unswnb15_random_forest.py  K-KAI-ML-010_mordor_lstm_baseline.py  K-KAI-ML-011_vllm_server.py  K-KAI-ML-012_model_tiering.md
05_K-NOC-05_OPERATIONS/: K-NOC-MDM-001_micromdm_ios.go  K-NOC-MDM-002_headwind_android.go
07_K-GRC-07_COMPLIANCE/: K-GRC-FW-000_framework_index.md
11_K-MAP-11_DR_MODULE_MAPPING/: K-MAP-001_EDR_Endpoint.md  K-MAP-004_CDR_Cloud.md  K-MAP-005_SDR_SaaS.md  K-MAP-008_VDR_Vulnerability.md  K-MAP-010_TI_ThreatIntel.md  K-MAP-011_CFDR_ConfigDrift.md  K-MAP-014_UEM_EndpointMgmt.md  K-MAP-018_KAI_AILayer.md  K-MAP-019_PSA_Business.md  K-MAP-020_LICENSE_COMPLIANCE.md
12_K-DEPLOY-12_TOPOLOGIES/: K-DEPLOY-DASH-001_grafana_overview.json  K-DEPLOY-DASH-002_prometheus_rules.yaml  K-DEPLOY-DASH-003_tuf_root.json  docker-compose.full.yml
agents/coresec/: Cargo.toml
agents/coresec/src/: agent.rs  config.rs  event.rs  fim.rs  governor.rs  main.rs  responder.rs  ti.rs
agents/coresec/src/detection/: mod.rs  sigma.rs  tests.rs  yara.rs
agents/coresec/src/hooks/: ebpf.rs  etw.rs  mod.rs
agents/coresec/src/ml/: anomaly.rs  mod.rs
agents/netguard/: Cargo.toml  build.rs
agents/netguard/src/: capture.rs  config.rs  dpi.rs  ids.rs  ipsum_lookup.rs  main.rs  ndpi_ffi.rs  rita_client.rs  tls.rs  waf.rs  zeek.rs
agents/perftrace/: Cargo.toml
agents/perftrace/src/: agent.rs  config.rs  main.rs  metrics.rs
agents/provisioning/: Cargo.toml
agents/provisioning/src/: config.rs  fingerprint.rs  install_script.rs  main.rs  registration.rs
agents/watchdog/: Cargo.toml
agents/watchdog/src/: config.rs  main.rs  manifest.rs  orchestrator.rs  tuf_updater.rs  zstd_delta.rs
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml  setup.ps1  setup.sh  verify.sh
docker/: kai.Dockerfile
docker-compose/: docker-compose.dev.yml
docs/: .gitignore  ARCHITECTURE.md  AUDIT-REMEDIATION-2026-02-27.md  BUGFIXES-2026-02-27.md  BUILD-CHANGELOG.md  COMPLIANCE.md  CRITICAL-STATUS-VERIFICATION.md  DEPLOYMENT.md  DEVELOPER-PORTAL-TREE.md  DOCUMENTATION-INVENTORY.md  DR-COVERAGE.md  ERPNEXT-COMPLETE.md  ERPNEXT-INTEGRATION.md  EXTERNAL-CLOSURE-RUNBOOK-2026-02-27.md  FINAL-REPORT.md  GO-STUBS-VERIFICATION.md  ISSUES-VERIFICATION.md  ITSM-SIMPLIFICATION-COMPLETE.md  ITSM-SIMPLIFICATION.md  KUBRIC Implementation.docx.md  KUBRIC_Claude_Code_Prompt_Playbook.docx.md  KUBRIC_Secrets_Register.docx.md  MIGRATION-VERIFICATION.md  NO-VAULT-DEPLOYMENT-WORKAROUND.md  NOTION-HANDOFF-BLOCKERS.md  PRODUCTION-REMEDIATION-PLAN.md  README.md  ROUTES-BREADCRUMBS.csv  ROUTES-BREADCRUMBS.json  ROUTES-BREADCRUMBS.md  SYNC-GUARDRAILS.md  THOROUGH-AUDIT-2026-02-27.md  docusaurus.config.js  docusaurus.config.ts  package.json  sidebars.js  sidebarsVersions.js
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.dev.yml
kai/: Dockerfile  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
kai/agents/: __init__.py  analyst.py  bill.py  comm.py  deploy.py  foresight.py  house.py  hunter.py  invest.py  keeper.py  risk.py  sentinel.py  simulate.py  triage.py
kai/analyst/: __init__.py  handler.py
kai/api/: __init__.py  main.py
kai/bill/: __init__.py  handler.py
kai/comm/: __init__.py  handler.py
kai/core/: __init__.py  crew.py  llm.py  nats_client.py  subscriber.py  vault.py
kai/deploy/: __init__.py  docker_manager.py  handler.py
kai/foresight/: __init__.py  handler.py
kai/house/: __init__.py  handler.py  monitor.py
kai/hunter/: __init__.py  handler.py
kai/intel/: __init__.py  scheduler.py  ti_feeds.py
kai/invest/: __init__.py  handler.py
kai/keeper/: __init__.py  handler.py
kai/psa/: __init__.py  erpnext.py  zammad.py
kai/reports/: __init__.py  qbr.py
kai/risk/: __init__.py  handler.py
kai/sentinel/: __init__.py  handler.py
kai/simulate/: __init__.py  handler.py
kai/tests/: test_psa.py
kai/tools/: __init__.py  integrations.py  security_tools.py
kai/triage/: __init__.py  handler.py
kai/workers/: __init__.py  temporal_worker.py
kai/workflows/: __init__.py  billing.py  remediation.py
portal-docs/: .portalignore  INDEX.md  README.md
proto/: buf.yaml
scripts/: backup-clickhouse.sh  bootstrap-cluster.sh  check_imports.py  deploy-aws.sh  fetch-detection-rules.sh  gen_wpcap_lib.ps1  init-databases.sh  master-validation.ps1  nats-stream-init.sh  provision-developer-toolchain.sh  sync-images-to-ghcr.sh  sync-upstream-intel.sh  sync-vendor-assets.sh  validate-fixes.ps1  validate-fixes.sh  validate_enterprise_readiness.py  vault-setup.sh  vendor-pull.sh  vendor-update.go
tools/: tools.go
verification/: K-DOCS-SUMMARY.md  K-DOCS.directories.txt  K-DOCS.files.txt
(+2613 files in other folders)
