[package]
name        = "perftrace"
version     = "0.2.0"
edition     = "2021"
description = "Kubric PerfTrace — host performance metrics and anomaly detection agent"

[dependencies]
# ── Core ──────────────────────────────────────────────────────────────────────
tokio              = { workspace = true }
futures            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
async-nats         = { workspace = true }
blake3             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
dotenvy            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
once_cell          = { workspace = true }
config             = { workspace = true }

# ── System / perf metrics ─────────────────────────────────────────────────────
# sysinfo: CPU, RAM, disk, process list — cross-platform
sysinfo        = { workspace = true }

# ── ML anomaly scoring (candle) ───────────────────────────────────────────────
candle-core    = { workspace = true }
candle-nn      = { workspace = true }

# ── OTel ──────────────────────────────────────────────────────────────────────
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
tracing-opentelemetry = { workspace = true }
