[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"
description = "Kubric Watchdog — agent health monitor and OTA update client"

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
prost        = { workspace = true }
async-nats   = { workspace = true }
blake3       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dotenvy      = { workspace = true }
